# sitter

./: pyproject.toml
sitter/src/seats/: admin.py  models.py  serializers.py  urls.py  views.py
sitter/src/seats/migrations/: 0001_initial.py  0002_alter_seat_user_delete_user.py  0003_seat_what3words_address.py
sitter/src/sitter/: asgi.py  settings.py  urls.py  wsgi.py
src/sitter/seats/: admin.py  models.py  serializers.py  views.py
src/sitter/seats/migrations/: 0001_initial.py  0002_alter_seat_user.py  0003_remove_seat_user_allocation.py  0004_alter_allocation_owner_delete_user.py  0005_remove_allocation_name.py  0006_seat_what_three_word.py
src/sitter/sitter/: settings.py  urls.py
